Bug 436356 Bullet lists does not display correctly, works in FF 2 p=Atsushi Sakai, r+sr=roc